fix(about): Adjust spacing for content sections
Corrected the vertical spacing between content sections on the 'about' page, specifically removing the top margin from the first h2 after the hero section for a more cohesive layout.

--- a/_sass/4-layouts/_page.scss
+++ b/_sass/4-layouts/_page.scss
@@ -31,6 +31,10 @@
 .page {
   margin: 80px auto;
 
+  h2 {
+    margin-top: 40px;
+  }
+
   img {
     margin: 30px 0;
   }
@@ -40,8 +44,57 @@
   }
 }
 
+/* Media Entry for About Page */
+.media-entry {
+  display: flex;
+  align-items: center;
+  gap: 25px;
+  margin-bottom: 35px;
+
+  .media-entry__image {
+    flex-shrink: 0;
+    width: 100px;
+    
+    img {
+      width: 100%;
+      height: auto;
+      margin: 0;
+      border-radius: 8px;
+    }
+  }
+
+  .media-entry__content {
+    flex-grow: 1;
+
+    h4, p {
+      margin: 0 0 5px;
+    }
+
+    h4 {
+      font-size: 18px;
+      margin-bottom: 3px;
+    }
+
+    p:last-child {
+      margin-bottom: 0;
+    }
+  }
+
+  @media only screen and (max-width: $mobile) {
+    align-items: flex-start;
+    
+    .media-entry__image {
+      width: 80px;
+    }
+  }
+}
+
 .page--no-margin-top {
   margin-top: 0;
+
+  .page__content h2:first-of-type {
+    margin-top: 0;
+  }
 }
 
 .page-box {
